k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zomato-frontend
  namespace: zomato-app
  labels:
    app: zomato-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zomato-frontend
  template:
    metadata:
      labels:
        app: zomato-frontend
    spec:
      containers:
      - name: zomato-ui
        image: IMAGE_PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
