k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomato-frontend-service
  namespace: zomato-app
spec:
  type: ClusterIP
  selector:
    app: zomato-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
